--- a/style.css
+++ b/style.css
@@ -16,9 +16,10 @@ body {
 .container {
   flex: 1;
   height: 100vh;
+  min-height: 480px;
   display: flex;
   flex-direction: column;
-  min-width: 190px;
+  min-width: 200px;
   max-width: 260px;
   background-color: rgb(149, 161, 161);
 }
@@ -54,6 +55,7 @@ body {
   text-decoration: none;
   color: white;
   font-weight: 600;
+  font-size: 1.1rem;
 }
 
 .options-2 {
@@ -66,13 +68,23 @@ body {
 .options-2 li {
   margin-bottom: 12px;
 }
+.options-2 a {
+  margin-left: 6px;
+  text-decoration: none;
+  color: white;
+  font-weight: 600;
+  font-size: 1.1rem;
+}
 
+
+/* Right side */
 .container-2 {
-  height: 100vh;
   flex: 4;
   display: flex;
   flex-direction: column;
 }
+
+/* Top-right side */
 .top-bar {
   flex: 1;
   min-height: 100px;
@@ -83,6 +95,17 @@ body {
 .top-bar-one {
   display: flex;
   justify-content: space-between;
+  padding: 24px;
+  min-width: 760px;
+}
+.top-bar-one .input-box {
+  margin-left: 16px;
+  padding-left: 12px;
+  width: 520px;
+  height: 24px;
+  border: none;
+  border-radius: 12px;
+  background-color: rgb(195, 219, 180);
 }
 .top-bar-two {
   display: flex;
