--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body {
 /* Top-right side */
 .top-bar {
   flex: 1;
-  min-height: 160px;
+  /* min-height: 200px; */
   box-shadow: 1px 1px 2px 2px rgb(197, 197, 197);
   display: flex;
   flex-direction: column;
@@ -95,7 +95,7 @@ body {
 .top-bar-one {
   display: flex;
   justify-content: space-between;
-  padding: 26px;
+  margin: 12px 26px 16px 26px;
   min-width: 860px;
 }
 .top-bar-one .search-bar {
@@ -130,7 +130,23 @@ body {
   display: flex;
   justify-content: space-between;
 }
+.top-bar-two .greeting-section {
+  display: flex;
+  align-items: center;
+}
+.top-bar-two .greeting-section > div {
+  margin-right: 16px;
+}
+.top-bar-two .greeting-section img {
+  margin-left: 26px;
+  width: 50px;
+  border-radius: 50%;
+}
+
+.top-bar-two .text-1 {
+  font-size: 12px;
+}
 
 .main-content {
-  flex: 4;
+  flex: 6;
 }
