--- a/style.css
+++ b/style.css
@@ -89,18 +89,17 @@ body {
 /* Top-right */
 .top-bar {
   flex: 1;
-  /* min-height: 200px; */
   box-shadow: 1px 1px 2px 2px rgb(197, 197, 197);
   display: flex;
   flex-direction: column;
   padding: 8px 48px;
-  
+  min-width: 900px;
 }
 .top-bar-one {
   display: flex;
   justify-content: space-between;
   /* margin: 12px 26px 16px 26px; */
-  min-width: 820px;
+  
 }
 .top-bar-one .search-bar {
   display: flex;
@@ -172,4 +171,23 @@ body {
 /* Main content */
 .main-content {
   flex: 6;
+  /* border: solid 1px red; */
+  display: flex;
+  padding-top: 40px;
+  padding-left: 20px;
+}
+.your-projects {
+flex: 3;
+}
+.right-bar {
+flex:1;
+
+display: flex;
+flex-direction: column;
+}
+.anouncement {
+  height: 50%;
+}
+.trending {
+  height: 50%;
 }
