--- a/style.css
+++ b/style.css
@@ -178,6 +178,8 @@ body {
 .your-projects {
 flex: 3;
 }
+
+/* Right-bar */
 .right-bar {
 flex:1;
 
@@ -185,15 +187,19 @@ display: flex;
 flex-direction: column;
 }
 .anouncement {
-  height: 50%;
-  max-width: 320px;
+  height: 240px;
+  width: 320px;
+  padding: 16px;
   background-color: white;
   box-shadow: 1px 2px 5px 1px rgb(221, 221, 221);
   border-radius: 12px;
+
+  margin-bottom: 18px;
 }
 .trending {
-  height: 50%;
+  height: 240px;
   max-width: 320px;
+  padding: 16px;
   background-color: white;
   box-shadow: 1px 2px 5px 1px rgb(221, 221, 221);
   border-radius: 12px;
