--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 .container {
   flex: 1;
   height: 100vh;
-  min-height: 480px;
+  min-height: 770px;
   display: flex;
   flex-direction: column;
   min-width: 200px;
@@ -93,22 +93,22 @@ body {
   display: flex;
   flex-direction: column;
   padding: 8px 48px;
-  min-width: 900px;
+  min-width: 800px;
 }
 .top-bar-one {
   display: flex;
   justify-content: space-between;
-  /* margin: 12px 26px 16px 26px; */
   
 }
 .top-bar-one .search-bar {
   display: flex;
   align-items: center;
+  width: 60%;
 }
 .top-bar-one .input-box {
   margin-left: 16px;
   padding-left: 12px;
-  width: 520px;
+  width: 100%;
   height: 24px;
   border: none;
   border-radius: 12px;
@@ -194,7 +194,7 @@ flex-direction: column;
   box-shadow: 1px 2px 5px 1px rgb(221, 221, 221);
   border-radius: 12px;
 
-  margin-bottom: 18px;
+  margin-bottom: 30px;
 }
 .trending {
   height: 240px;
