--- a/style.css
+++ b/style.css
@@ -83,7 +83,6 @@ body {
   flex: 4;
   display: flex;
   flex-direction: column;
-  
 }
 
 /* Top-right */
@@ -98,7 +97,6 @@ body {
 .top-bar-one {
   display: flex;
   justify-content: space-between;
-  
 }
 .top-bar-one .search-bar {
   display: flex;
@@ -176,20 +174,20 @@ body {
   padding: 40px 20px;
 }
 .your-projects {
-flex: 3;
+  flex: 3;
 }
 
 /* Right-bar */
 .right-bar {
-flex:1;
+  flex: 1;
 
-display: flex;
-flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 .anouncement {
-  height: 240px;
+  /* height: 240px; #you don't need height because it follows the content inside it */
   width: 320px;
-  padding: 16px;
+  padding: 24px;
   background-color: white;
   box-shadow: 1px 2px 5px 1px rgb(221, 221, 221);
   border-radius: 12px;
@@ -203,4 +201,22 @@ flex-direction: column;
   background-color: white;
   box-shadow: 1px 2px 5px 1px rgb(221, 221, 221);
   border-radius: 12px;
+}
+
+.anouncement-content label {
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.right-bar .article {
+  display: -webkit-box;
+  line-clamp: 3;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+  font-size: 10px;
+  margin-bottom: 6px;
+  color: rgb(129, 129, 129);
 }
