--- a/style.css
+++ b/style.css
@@ -17,8 +17,7 @@ body {
 /* Sidebar */
 .container {
   flex: 1;
-  height: 100vh;
-  min-height: 770px;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   min-width: 200px;
@@ -174,7 +173,7 @@ body {
   padding: 40px 20px;
 }
 .your-projects {
-  flex: 3;
+  flex: 4;
 }
 
 /* Right-bar */
@@ -186,17 +185,16 @@ body {
 }
 .anouncement {
   /* height: 240px; #you don't need height because it follows the content inside it */
-  width: 320px;
+  width: 300px;
   padding: 24px;
   background-color: white;
   box-shadow: 1px 2px 5px 1px rgb(221, 221, 221);
   border-radius: 12px;
 
-  margin-bottom: 30px;
+  margin-bottom: 34px;
 }
 .trending {
-  height: 240px;
-  max-width: 320px;
+  width: 300px;
   padding: 16px;
   background-color: white;
   box-shadow: 1px 2px 5px 1px rgb(221, 221, 221);
@@ -217,6 +215,6 @@ body {
   text-overflow: ellipsis;
 
   font-size: 10px;
-  margin-bottom: 6px;
+  margin-bottom: 12px;
   color: rgb(129, 129, 129);
 }
