--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   display: flex;
 }
 
-/* Sidebar */
+/* Left-sidebar */
 .container {
   flex: 1;
   min-height: 100vh;
@@ -77,7 +77,7 @@ body {
   font-size: 1.1rem;
 }
 
-/* Right side */
+/* Container-right side */
 .container-2 {
   flex: 4;
   display: flex;
@@ -167,17 +167,6 @@ body {
   align-self: center;
 }
 
-/* Main content */
-.main-content {
-  flex: 6;
-  /* border: solid 1px red; */
-  display: flex;
-  padding: 40px 20px;
-}
-.your-projects {
-  flex: 4;
-}
-
 /* Right-bar */
 .right-bar {
   flex: 1;
@@ -239,4 +228,28 @@ body {
   height: 46px;
   border-radius: 50%;
   object-fit: cover;
+}
+
+/* Main content */
+.main-content {
+  flex: 6;
+  /* border: solid 1px red; */
+  display: flex;
+  padding: 40px 20px;
+}
+.your-projects {
+  flex: 4;
+}
+
+.projects-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.projects-list .project-content{
+  border: solid 1px red;
+  width: 360px;
+  padding: 16px;
+  margin-right: 24px;
+  margin-bottom: 24px;
 }
