--- a/style.css
+++ b/style.css
@@ -247,14 +247,16 @@ body {
 }
 
 .projects-list .project-content{
-
-  border: solid 1px red;
   flex:1;
+
   min-width: 360px;
   height: 240px;
   padding: 26px;
   margin-right: 24px;
   margin-bottom: 24px;
+  border-radius: 8px;
+  border-left: 8px solid rgb(133, 168, 168);
+  box-shadow: 1px 2px 5px 1px rgb(221, 221, 221);
 }
 
 .project-content p{
