Added icons for main content

--- a/style.css
+++ b/style.css
@@ -4,11 +4,6 @@
   box-sizing: border-box;
 }
 
-body {
-  background-color: rgb(243, 243, 243);
-  color: rgb(0, 0, 0);
-}
-
 /* Wrapper container  */
 .big-container {
   display: flex;
@@ -87,9 +82,11 @@ body {
 /* Top-right */
 .top-bar {
   flex: 1;
-  box-shadow: 1px 1px 2px 2px rgb(197, 197, 197);
   display: flex;
   flex-direction: column;
+
+  box-shadow: 1px 1px 2px 4px rgb(165, 165, 165);
+  background-color: white;
   padding: 8px 48px;
   min-width: 800px;
 }
@@ -236,18 +233,24 @@ body {
   /* border: solid 1px red; */
   display: flex;
   padding: 40px 20px;
+  background-color: rgb(248, 248, 248);
 }
 .your-projects {
   flex: 4;
+  
 }
 
 .projects-list {
   display: flex;
   flex-wrap: wrap;
+  
 }
 
 .projects-list .project-content{
   flex:1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
   min-width: 360px;
   height: 240px;
@@ -257,6 +260,7 @@ body {
   border-radius: 8px;
   border-left: 8px solid rgb(133, 168, 168);
   box-shadow: 1px 2px 5px 1px rgb(221, 221, 221);
+  background-color: white;
 }
 
 .project-content p{
@@ -270,4 +274,14 @@ display: -webkit-box;
 
 .project-content p{
   color: rgb(48, 48, 48);
+}
+
+.project-content .icons {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.project-content .icons > span {
+  margin-left: 12px;
+  cursor: pointer;
 }
