--- a/style.css
+++ b/style.css
@@ -32,34 +32,48 @@
   justify-content: center;
   align-items: center;
   display: flex;
+  padding: 12px;
   /* flex: 1; */
 }
 
 .sidebar-logo {
-  width: 50px;
+  width: 46px;
+  filter: invert();
+  margin-right: 6px
 }
 
 .logo-text {
   font-size: 26px;
+  font-weight: bold;
+  color: white;
+}
+
+.options-1, .options-2 {
+font-family: 'montserrat';
+font-size: 1.1rem;
+}
+.options-1 img, .options-2 img {
+  filter: invert();
 }
 
 .options-1 {
   /* flex: 3; */
   padding: 24px;
+  margin-top: 24px;
 }
 
 .options-1 > ul {
   list-style: none;
 }
-.options-1 li {
-  margin-bottom: 12px;
+.options-1 li, .options-2 li {
+  display: flex;
+
+  margin-bottom: 28px;
 }
-.options-1 a {
-  margin-left: 6px;
+.options-1 a, .options-2 a {
+  margin-left: 18px;
   text-decoration: none;
   color: white;
-  font-weight: 600;
-  font-size: 1.1rem;
 }
 
 .options-2 {
@@ -68,16 +82,6 @@
 }
 .options-2 > ul {
   list-style: none;
-}
-.options-2 li {
-  margin-bottom: 12px;
-}
-.options-2 a {
-  margin-left: 6px;
-  text-decoration: none;
-  color: white;
-  font-weight: 600;
-  font-size: 1.1rem;
 }
 
 /* Container-right side */
@@ -132,6 +136,10 @@
   height: 40px;
   border-radius: 50%;
   object-fit: cover;
+}
+
+.top-bar .icon {
+  width: 12px;
 }
 
 .top-bar-two {
