--- a/style.css
+++ b/style.css
@@ -14,9 +14,14 @@
   src: url(./assets/fonts/Quicksand.ttf);
 }
 
+:root {
+  --primary-color: rgb(61, 80, 80);
+}
+
 /* Wrapper container  */
 .big-container {
   display: flex;
+  min-height: 100vh;
   font-family: "quicksand", "Arial Narrow", Arial, sans-serif;
 }
 
@@ -26,10 +31,10 @@
   display: flex;
   flex-direction: column;
 
-  min-height: 100vh;
-  min-width: 240px;
-  max-width: 260px;
-  background-color: rgb(61, 80, 80);
+  
+  min-width: 250px;
+  max-width: 280px;
+  background-color: var(--primary-color);
   z-index: 2;
 }
 
@@ -177,7 +182,7 @@
   height: 32px;
   width: 80px;
   margin-left: 12px;
-  background-color: rgb(149, 161, 161);
+  background-color: var(--primary-color);
   border-radius: 20px;
   cursor: pointer;
   color: white;
